implementacion de Usuarios y UsuariosPermisos

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Manejo de Cookies</title>
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
 </head>
-<body>
-$END$
+<body class="bg-light d-flex justify-content-center align-items-center vh-100">
+
+<div class="text-center">
+    <h2 class="mb-4 fw-semibold">Manejo de Cookies</h2>
+
+    <div class="d-grid gap-2">
+        <a href="/cookies/productos" class="btn btn-outline-primary">Mostrar producto</a>
+        <a href="/cookies/categorias" class="btn btn-outline-secondary">Categoría</a>
+        <a href="/cookies/login.html" class="btn btn-outline-success">Login</a>
+        <a href="/cookies/logout" class="btn btn-outline-danger">Cerrar Sesión</a>
+        <a href="/cookies/usuario" class="btn btn-outline-info">Usuario</a>
+        <a href="/cookies/usuarioPermiso" class="btn btn-outline-dark">Usuario Permiso</a>
+    </div>
+</div>
+
+<script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
